# Terrible-stuff

game/: CMakeLists.txt  a.out  main.cpp
game/boss/: dragon.cpp  dragon.h
game/encounter/: encounter.cpp  encounter.h
game/klasy/: ability.h  character.cpp  character.h  mage.cpp  mage.h  priest.cpp  priest.h  warrior.cpp  warrior.h
game/klasy/mage/: mage.cpp  mage.h
game/klasy/priest/: priest.cpp  priest.h
game/klasy/warrior/: warrior.cpp  warrior.h
game/party/: party.cpp  party.h
